--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=주문 가격 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=주문 제한 메모 관리 (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=순서를 처리하십시요
 action.MANAGE_COMMERCE_PRICE_LISTS=가격 표 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=첨부 파일 관리 (Automatic Translation)
