--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=ບໍລິຫານການສັ່ງຊື້ຕ່າງໆ
 action.MANAGE_COMMERCE_PRICE_LISTS=Manage Price Lists (Automatic Copy)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Manage Attachments (Automatic Copy)
