--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Bestelprijzen beheren
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Beperkte Ordernota's beheren
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Bestellingen beheren
 action.MANAGE_COMMERCE_PRICE_LISTS=Prijslijsten beheren
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Bijlagen beheren
