--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=إدارة أسعار الطلبات
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=إدارة ملاحظات الطلبات المقيدة
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=إدارة الطلبات
 action.MANAGE_COMMERCE_PRICE_LISTS=إدارة قوائم الأسعار
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=إدارة المرفقات
