--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestiona els preus de les comandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administra notes restringides de comandes
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Gestiona les comandes
 action.MANAGE_COMMERCE_PRICE_LISTS=Gestiona les llistes de preus
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Gestiona els fitxers adjunts
