--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Administrer ordrepriser (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administrere begrænsede noter af ordre (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Administrer ordre
 action.MANAGE_COMMERCE_PRICE_LISTS=Administrer prislister (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Administrere vedhæftede filer (Automatic Translation)
