--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Διαχείριση τιμών παραγγελιών (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Διαχείριση σημειώσεων περιορισμένης παραγγελίας (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Διαχείριση παραγγελιών
 action.MANAGE_COMMERCE_PRICE_LISTS=Διαχείριση τιμοκαταλόγων (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Διαχείριση συνημμένων (Automatic Translation)
