--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=مدیریت قیمت سفارش (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=مدیریت یادداشت های محدود شده سفارش
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=مدیریت سفارشات
 action.MANAGE_COMMERCE_PRICE_LISTS=مدیریت لیست های قیمت
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=مدیریت ضمیمه ها
