--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hallitse Tilausten Hintoja
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hallitse Tilausten Rajoitettuja Huomautuksia
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Hallinnoi tilauksia
 action.MANAGE_COMMERCE_PRICE_LISTS=Hallitse Hinnastoja
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Hallitse Liitteitä
