--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gérer les prix des commandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gérer les notes restreintes de commande
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Gérer les commandes
 action.MANAGE_COMMERCE_PRICE_LISTS=Gérer les listes de prix
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Gérer les pièces jointes
