--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=ऑर्डर की कीमतें प्रबंधित करें
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=आदेश प्रतिबंधित नोट प्रबंधित करें
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=ऑर्डर को प्रबंधित करना
 action.MANAGE_COMMERCE_PRICE_LISTS=मूल्य सूची प्रबंधित करें
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=अनुलग्नक प्रबंधित करें
