--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Megrendelés árainak a kezelése
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Megrendelések korlátozott megjegyzéseinek a kezelése
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Megrendelések kezelése
 action.MANAGE_COMMERCE_PRICE_LISTS=Árlisták kezelése
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Mellékletek kezelése
