--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestione Prezzi d'Ordine
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gestione Note d'Ordine Private
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Gestisci Ordini
 action.MANAGE_COMMERCE_PRICE_LISTS=Gestione Listini Prezzi
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Gestione Allegati
