--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gerenciar Preços do Pedido
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gerenciar Notas Restritas do Pedido
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Gerenciar pedidos
 action.MANAGE_COMMERCE_PRICE_LISTS=Gerenciar Listas de Preço
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Gerenciar Anexos
