--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hantera orderpriser
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hantera beställningsbegränsade anteckningar
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Hantera beställningar
 action.MANAGE_COMMERCE_PRICE_LISTS=Hantera prislistor
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Hantera bilagor
