--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=จัดการราคาในใบสั่ง (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=จัดการบันทึกย่อที่ถูกจํากัดใบสั่ง (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=จัดการใบสั่ง (Automatic Translation)
 action.MANAGE_COMMERCE_PRICE_LISTS=จัดการราคาตลาด (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=จัดการสิ่งที่แนบมา (Automatic Translation)
