--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Sipariş Fiyatlarını Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Sipariş Kısıtlamalı Notlarını Yönet (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=İstekleri Yönet
 action.MANAGE_COMMERCE_PRICE_LISTS=Fiyat Listelerini Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Ekleri Yönet (Automatic Translation)
