--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Quản lý giá đơn hàng (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Quản lý ghi chú bị hạn chế thứ tự (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Quản lý đơn đặt hàng
 action.MANAGE_COMMERCE_PRICE_LISTS=Quản lý bảng giá (Automatic Translation)
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Quản lý Phần đính kèm (Automatic Translation)
