--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=فتح في علامة تبويب جديدة.
 open-in-ms-office=فتح الملف باستخدام MS Office
 open-menu=فتح القائمة
 open-page-in-a-new-tab=فتح الصفحة في علامة تبويب جديدة
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=تحرير قالب
 open-pages=الصفحات اليتيمة
 open-private-pages=فتح صفحات خاصة
