--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Отваряне в нов раздел. (Automatic Translatio
 open-in-ms-office=Отваряне в MS Office (Automatic Translation)
 open-menu=Отваряне на менюто (Automatic Translation)
 open-page-in-a-new-tab=Отваряне на страница в нов подпрозорец (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Управление на шаблони
 open-pages=Отваряне на страници (Automatic Translation)
 open-private-pages=Отваряне на частни страници (Automatic Translation)
