--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=Obre en una pestanya nova.
 open-in-ms-office=Obre amb MS Office
 open-menu=Obre el menú
 open-page-in-a-new-tab=Obre la pàgina en una pestanya nova
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Obre la plantilla de la pàgina
 open-pages=Obrir pàgines
 open-private-pages=Obre les pàgines privades
