--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Otevřete na nové kartě. (Automatic Translation)
 open-in-ms-office=Otevřít v MS Office
 open-menu=Otevřít nabídku (Automatic Translation)
 open-page-in-a-new-tab=Otevření stránky na nové kartě (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Otevřít šablonu stránky
 open-pages=Nezařazené stránky
 open-private-pages=Otevřít soukromé stránky
