--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=In einer neuen Registerkarte öffnen.
 open-in-ms-office=In MS Office öffnen
 open-menu=Menü öffnen
 open-page-in-a-new-tab=Seite in einem neuen Reiter öffnen
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Seitenvorlage öffnen
 open-pages=Seiten öffnen
 open-private-pages=Private Seiten öffnen
