--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Άνοιγμα σε νέα καρτέλα. (Automatic Translat
 open-in-ms-office=Να ανοιχτεί στο MS Office
 open-menu=Άνοιγμα μενού (Automatic Translation)
 open-page-in-a-new-tab=Άνοιγμα σελίδας σε νέα καρτέλα (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Ανοικτό πρότυπο σελίδων
 open-pages=Ορφανές σελίδες
 open-private-pages=Άνοιγμα ιδιωτικών σελίδων
