--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=Se abre en una pestaña nueva.
 open-in-ms-office=Abrir en MS Office
 open-menu=Abrir menú
 open-page-in-a-new-tab=Abrir la página en una nueva pestaña
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Abrir la plantilla de página
 open-pages=Páginas abiertas
 open-private-pages=Abrir las páginas privadas
