--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Avage uuel vahekaardil. (Automatic Translation)
 open-in-ms-office=Ava MS Office'is (Automatic Translation)
 open-menu=Ava menüü (Automatic Translation)
 open-page-in-a-new-tab=Lehe avamine uuel vahekaardil (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Mallide haldamine
 open-pages=Vanemata lehed
 open-private-pages=Eralehtede avamine (Automatic Translation)
