--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -10448,6 +10448,7 @@ open-in-a-new-tab=Avaa uuteen välilehteen.
 open-in-ms-office=Avaaa MS Officella
 open-menu=Avoin valikko
 open-page-in-a-new-tab=Avaa Sivu Uuteen Välilehteen
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Avaa sivumalli
 open-pages=Avaa sivut
 open-private-pages=Avaa jäsensivut
