--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Ouvrir dans un nouvel onglet.
 open-in-ms-office=Ouvrez-vous dans MS Office
 open-menu=Ouvrir le menu
 open-page-in-a-new-tab=Ouvrir la page dans un nouvel onglet
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Ouvrez le calibre de page
 open-pages=Ouvrir pages
 open-private-pages=Ouvrir pages privées
