--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=एक नए टैब में खुला। (Automatic T
 open-in-ms-office=एमएस कार्यालय में खुला (Automatic Translation)
 open-menu=खुला मेनू (Automatic Translation)
 open-page-in-a-new-tab=एक नए टैब में पेज खोलें (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=पन्ने का नमूना
 open-pages=ओपन पेज (Automatic Translation)
 open-private-pages=निजी पेज खोलें (Automatic Translation)
