--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -10452,6 +10452,7 @@ open-in-a-new-tab=Megnyitás új fülön.
 open-in-ms-office=Megnyitás MS Office-ban
 open-menu=Menü megnyitása
 open-page-in-a-new-tab=Oldal megnyitása új fülön
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Oldalsablon megnyitás
 open-pages=Nyitott oldalak
 open-private-pages=Privát oldalak megnyitása
