--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Buka di tab baru. (Automatic Translation)
 open-in-ms-office=Membuka di MS Office
 open-menu=Buka menu (Automatic Translation)
 open-page-in-a-new-tab=Buka Halaman di Tab Baru (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Buka HalamanTemplate
 open-pages=Halaman Orphan
 open-private-pages=Buka Halaman Pribadi
