--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -10450,6 +10450,7 @@ open-in-a-new-tab=Aprire in una nuova scheda. (Automatic Translation)
 open-in-ms-office=Apri in MS Office
 open-menu=Aprire il menu (Automatic Translation)
 open-page-in-a-new-tab=Aprire la pagina in una nuova scheda (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Apri Modello di Pagina
 open-pages=Pagine Libere
 open-private-pages=Apri le pagine private
