--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=פתח בכרטיסיה חדשה. (Automatic Translation)
 open-in-ms-office=פתוח ב-MS Office
 open-menu=תפריט פתיחה (Automatic Translation)
 open-page-in-a-new-tab=פתיחת דף בכרטיסיה חדשה (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=תבנית דף פתוחה
 open-pages=דפים פתוחים
 open-private-pages=דפים פרטיים פתוחים
