--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=新しいタブで開きます。
 open-in-ms-office=MS Officeで開く
 open-menu=メニューを開く
 open-page-in-a-new-tab=ページを新しいタブで開く
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=ページのテンプレートを開く
 open-pages=ページを開く
 open-private-pages=非公開ページを開く
