--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=새 탭에서 열립니다. (Automatic Translation)
 open-in-ms-office=MS 사무실에서 열기 (Automatic Translation)
 open-menu=오픈 메뉴 (Automatic Translation)
 open-page-in-a-new-tab=새 탭에서 페이지 열기 (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=페이지 템플렛을 여십시오
 open-pages=고아 페이지
 open-private-pages=비공개 페이지 열기 (Automatic Translation)
