--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Atidaryti naujame skirtuke. (Automatic Translation)
 open-in-ms-office=Atidaryti MS Office (Automatic Translation)
 open-menu=Atidaryti meniu (Automatic Translation)
 open-page-in-a-new-tab=Atidaryti puslapį naujame skirtuke (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Atidaryti puslapio šabloną (Automatic Translation)
 open-pages=Atidaryti puslapius (Automatic Translation)
 open-private-pages=Atidaryti privačius puslapius (Automatic Translation)
