--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Buka dalam tab baru. (Automatic Translation)
 open-in-ms-office=Buka di Pejabat MS (Automatic Translation)
 open-menu=Buka menu (Automatic Translation)
 open-page-in-a-new-tab=Buka Halaman dalam Tab Baru (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Buka Templat Halaman (Automatic Translation)
 open-pages=Buka Halaman (Automatic Translation)
 open-private-pages=Buka halaman peribadi (Automatic Translation)
