--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Åpne i en ny fane. (Automatic Translation)
 open-in-ms-office=Åpne i MS Office
 open-menu=Åpne meny (Automatic Translation)
 open-page-in-a-new-tab=Åpne side i en ny fane (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Åpne sidemal
 open-pages=Sider som ikke har lenke til seg
 open-private-pages=Åpne private sider
