--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -10452,6 +10452,7 @@ open-in-a-new-tab=Openen in een nieuw tabblad.
 open-in-ms-office=In MS Offic openen
 open-menu=Menu openen
 open-page-in-a-new-tab=Pagina openen in nieuw tabblad
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Paginasjabloon openen
 open-pages=Pagina's openen
 open-private-pages=Besloten pagina's openen
