--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Otwórz na nowej karcie. (Automatic Translation)
 open-in-ms-office=Otwórz w MS Office
 open-menu=Otwórz menu (Automatic Translation)
 open-page-in-a-new-tab=Otwieranie strony na nowej karcie (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Otwórz szablon strony
 open-pages=Strony niepodlinkowane
 open-private-pages=Otwórz strony prywatne
