--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Abra uma nova aba.
 open-in-ms-office=Abrir no MS Office
 open-menu=Abrir menu
 open-page-in-a-new-tab=Abrir página em uma nova aba
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Abrir modelo de página
 open-pages=Páginas Abertas
 open-private-pages=Abrir páginas privadas
