--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=Abrir no MS Office
 open-menu=Menu aberto (Automatic Translation)
 open-page-in-a-new-tab=Página Aberta em uma nova guia (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Abrir template de página
 open-pages=Abrir Páginas
 open-private-pages=Abrir Páginas Privadas
