--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Deschideți într-o filă nouă. (Automatic Translation)
 open-in-ms-office=Deschide in MS Office
 open-menu=Deschidere meniu (Automatic Translation)
 open-page-in-a-new-tab=Deschidere pagină într-o filă nouă (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Deschide Sablon de Pagina
 open-pages=Pagini Orfan
 open-private-pages=Deschide pagini private
