--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Открыть в новой вкладке. (Automatic Transl
 open-in-ms-office=открыть в MS Office
 open-menu=Открытое меню (Automatic Translation)
 open-page-in-a-new-tab=Открытая страница в новой вкладке (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Открыть шаблон страницы
 open-pages=Висячие страницы
 open-private-pages=Открыть частные страницы
