--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Otvorte novú kartu. (Automatic Translation)
 open-in-ms-office=Otvoriť v MS Office
 open-menu=Otvoriť ponuku (Automatic Translation)
 open-page-in-a-new-tab=Otvoriť stranu na novej karte (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Otvoriť šablónu stránky
 open-pages=Osirotené stránky
 open-private-pages=Otvoriť súkromné stránky
