--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Odprite nov zavihek. (Automatic Translation)
 open-in-ms-office=Odpri v MS Officeu (Automatic Translation)
 open-menu=Odpri meni (Automatic Translation)
 open-page-in-a-new-tab=Odpiranje strani v novem zavihku (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Uredi predloge
 open-pages=Strani brez nadrejenih
 open-private-pages=Odpiranje zasebnih strani (Automatic Translation)
