--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Öppna i en ny flik.
 open-in-ms-office=Öppna i MS Office
 open-menu=Öppna meny
 open-page-in-a-new-tab=Öppna sida i en ny flik
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Öppna sidmall
 open-pages=Sidor som ej har länk till sig
 open-private-pages=Öppna privata sidor
