--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=เปิดในแท็บใหม่ (Automatic Translat
 open-in-ms-office=เปิดใน MS Office
 open-menu=เปิดเมนู (Automatic Translation)
 open-page-in-a-new-tab=เปิดเพจในแท็บใหม่ (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=เปิดหน้าเทมเพลต
 open-pages=เปิดเพจ (Automatic Translation)
 open-private-pages=เปิดเพจส่วนตัว (Automatic Translation)
