--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Yeni bir sekmede açın. (Automatic Translation)
 open-in-ms-office=MS Office'te aç (Automatic Translation)
 open-menu=Menüyü aç (Automatic Translation)
 open-page-in-a-new-tab=Sayfayı Yeni Sekmede Açma (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Şablonları Yönet
 open-pages=Bağlantısız Sayfalar
 open-private-pages=Özel sayfaları açma (Automatic Translation)
