--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Відкрити в новій вкладці. (Automatic Tran
 open-in-ms-office=Відкрити в MS Office (Automatic Translation)
 open-menu=Відкрити меню (Automatic Translation)
 open-page-in-a-new-tab=Відкрити сторінку в новій вкладці (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Управління шаблонами
 open-pages=Залишені сторінки
 open-private-pages=Відкриття приватних сторінок (Automatic Translation)
