--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Mở trong tab mới. (Automatic Translation)
 open-in-ms-office=Mở trong MS Office
 open-menu=Mở menu (Automatic Translation)
 open-page-in-a-new-tab=Mở Trang trong Tab Mới (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Mở Trang Biểu mẫu
 open-pages=Trang mở
 open-private-pages=Mở các trang cá nhân
