--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -10451,6 +10451,7 @@ open-in-a-new-tab=在新选项卡中打开。
 open-in-ms-office=在MS Office里打开
 open-menu=打开菜单
 open-page-in-a-new-tab=在新选项卡中打开页面
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=打开页面模板
 open-pages=打开页面
 open-private-pages=打开私有页面
