--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -10450,6 +10450,7 @@ open-in-a-new-tab=在新頁籤開啟。
 open-in-ms-office=在MS Office開啟
 open-menu=開啟選單
 open-page-in-a-new-tab=在新頁籤開啟頁面
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=開啟頁面版型
 open-pages=孤兒頁面
 open-private-pages=開啟私密頁面
