--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=Åbn in MS Office
 open-menu=Menuen Åbn (Automatic Translation)
 open-page-in-a-new-tab=Åbn side under en ny fane (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Åbn sideskabelon
 open-pages=Orphan sider
 open-private-pages=Åbn private sider
