--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=MS Office-n ireki
 open-menu=Open menu (Automatic Copy)
 open-page-in-a-new-tab=Open Page in a New Tab (Automatic Copy)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Ireki orriko txantiloia
 open-pages=Orrialde irekiak
 open-private-pages=Ireki orri pribatuak
