--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=در یک برگه جدید باز کنید. (Automatic Transl
 open-in-ms-office=در مایکروسافت افیس باز شود
 open-menu=منو باز کن (Automatic Translation)
 open-page-in-a-new-tab=باز کردن صفحه در یک زبانه جدید (Automatic Translation)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=ویرایش قالب
 open-pages=صفحه‌های بدون والد
 open-private-pages=صفحات شخصی باز شود
