--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=Abrir en MS office
 open-menu=Abrir o menú
 open-page-in-a-new-tab=Open Page in a New Tab (Automatic Copy)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Abrir modelo de páxina
 open-pages=Páxinas orfas
 open-private-pages=Abrir páxinas privadas
