--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=ເປີດໃນ MS Office
 open-menu=Open menu (Automatic Copy)
 open-page-in-a-new-tab=Open Page in a New Tab (Automatic Copy)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=ເປີດໜ້າແທ໋ມເພດ
 open-pages=ໜ້າດ່ຽວ
 open-private-pages=ເປີດໜ້າສ່ວນຕົວ
