--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=Отвори у MS Office
 open-menu=Open menu (Automatic Copy)
 open-page-in-a-new-tab=Open Page in a New Tab (Automatic Copy)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=Отвори Темплејт Странице
 open-pages=Стране без Родитеља
 open-private-pages=Отвори приватне странице
