--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -10449,6 +10449,7 @@ open-in-a-new-tab=Open in a new tab. (Automatic Copy)
 open-in-ms-office=Open in MS Office (Automatic Copy)
 open-menu=Open menu (Automatic Copy)
 open-page-in-a-new-tab=Open Page in a New Tab (Automatic Copy)
+open-page-options-menu=Open Page Options Menu (Automatic Copy)
 open-page-template=பக்கத்தின் டெம்ப்ளேட்டைத் திற
 open-pages=திறந்த பக்கங்கள்
 open-private-pages=தனிப்பட்ட பக்கங்களைத் திற
